--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,9 +21,11 @@ dependencies:
     sdk: flutter
   flappy_search_bar: 1.7.2
   grouped_buttons: ^1.0.3
+  flutter_localizations:
+    sdk: flutter
 
-
-
+  intl: any # Take the version from Flutter.
+  intl_translation: any
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
