--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   flappy_search_bar: 1.7.2
   grouped_buttons: ^1.0.3
   url_launcher: ^3.0.1
+  expandable: ^4.1.3
+  expand_widget: ^0.2.0
   flutter_localizations:
     sdk: flutter
 
